pxc/tests/test_011_foreach/fe_arr5.px

public namespace fe_arr5;
import common -;

function void test1(vector{string} const& a)
{
  for (size_t i, string mutable& s : a) { // error
    s = to_string(i);
  }
  for (size_t i, string s : a) {
    println(a[i]);
  }
}

vector{string} a;
a.resize(100);
test1(a);
